hphp/hack/test/typecheck/switch/multiple_errors.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function foo(string $s) : int {
  switch ($s) {
    default:
    default:
      return 0;
      break;
    case '1':
      return 1;
  }
}
